--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>For Thiri 💖 - A Special Message</title>
+    <title>For Thiri - A Special Message</title>
     <meta name="description" content="A romantic surprise page filled with love and special moments for Thiri" />
     <meta name="author" content="With Love" />
 
-    <meta property="og:title" content="For Thiri 💖 - A Special Message" />
+    <meta property="og:title" content="For Thiri - A Special Message" />
     <meta property="og:description" content="A romantic surprise page filled with love and special moments for Thiri" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
